# assygen

./: .gitignore  CHANGELOG.md  README.md  assygen.py  assygen_full.py  assygen_simple.py  gerber2pdf.py  main.py  modern_gerber.py  pyproject.toml
